<resources>
    <string name="app_name">Auto Switch Controller</string>
    <string name="mode_selection">Please select connection mode</string>
    <string name="select_device_type">Select Device Type</string>

    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="sync_time_str">Sync Time</string>
    <string name="not_connected_str">Device not connected</string>
    <string name="connected_str">Connected to: <b>%1$s</b></string>
    <string name="current_time_str">Current Time:\n%1$s</string>
    <string name="dev_time_str">Device Time:\n%1$s</string>

    <string name="switch_clk_info">Click on values to edit them.</string>

    <string name="switch_str">Switch</string>
    <string name="on_str">On</string>
    <string name="off_str">Off</string>
    <string name="time_str">%1$d:00</string>

    <string name="usb">USB OTG</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="terminal_mode">Terminal Mode</string>
    <string name="send">Send</string>
    <string name="terminal_input_hint">Enter text to send</string>
    <string name="sync">Sync</string>
    <string name="delete_str">Del</string>
    <string name="show_logs">Show Logs</string>
    <string name="add">Add</string>
    <string name="off_hour">Off Hour</string>
    <string name="on_hour">On Hour</string>
    <string name="switch_txt">Select switch</string>
    <string name="edit_str">Edit</string>
    <string name="mock_device">Mock Device</string>
</resources>
