<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            android:text="@string/mode_selection" />

        <Button
            android:id="@+id/btn_usb"
            style="@style/launch_button"
            android:onClick="onUsbClick"
            android:layout_below="@id/info_text"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#333333"
            android:drawableStart="@android:drawable/stat_notify_sdcard_usb"
            android:text="@string/usb"
            />

        <Button
            android:id="@+id/btn_bluetooth"
            style="@style/launch_button"
            android:onClick="onBluetoothClick"
            android:layout_below="@id/btn_usb"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#0336ff"
            android:drawableStart="@android:drawable/stat_sys_data_bluetooth"
            android:text="@string/bluetooth"
            />

        <CheckBox
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_bluetooth"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:onClick="onModeClick"
            android:text="@string/terminal_mode"
            />

    </RelativeLayout>

</RelativeLayout>