<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="15dp">

            <TextView
                android:id="@+id/add_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Empty slot"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/info_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SwitchLabelStyle"
                        android:text="@string/switch_str" />

                    <TextView
                        android:id="@+id/switch_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SwitchValueStyle"
                        android:layout_marginStart="5dp"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchLabelStyle"
                            android:text="@string/on_str" />

                        <TextView
                            android:id="@+id/on_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchValueStyle"
                            android:layout_marginStart="5dp"
                            android:text="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchValueStyle"
                            android:text=":00" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchLabelStyle"
                            android:text="@string/off_str" />

                        <TextView
                            android:id="@+id/off_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchValueStyle"
                            android:layout_marginStart="5dp"
                            android:text="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SwitchValueStyle"
                            android:text=":00" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageButton
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:tint="@color/switchIcon"
                android:contentDescription="@string/add"
                android:src="@android:drawable/ic_input_add"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_str"
                android:scaleType="fitCenter"
                android:tint="@color/switchIcon"
                android:src="@drawable/pencil" />

            <ImageButton
                android:id="@+id/del_btn"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/delete_str"
                android:tint="@color/switchIcon"
                android:layout_marginStart="10dp"
                android:src="@drawable/trash_can" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>